--- a/rufangrongke/rufangrongke/Classes/wo/Controller/WXZPersonalPhoneVC.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/Controller/WXZPersonalPhoneVC.xib
@@ -7,10 +7,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WXZPersonalPhoneVC">
             <connections>
+                <outlet property="currentPhoneNumLabel" destination="KkQ-B6-DQh" id="vu4-kR-UFh"/>
+                <outlet property="footerView" destination="2IX-aL-qvE" id="WMN-ME-VOJ"/>
                 <outlet property="myTableView" destination="TJU-pK-jht" id="rwB-wc-4Y3"/>
-                <outlet property="phoneNumLabel" destination="KkQ-B6-DQh" id="XJr-f1-kXP"/>
                 <outlet property="tipsHeaderView" destination="JLE-4s-yGQ" id="CP8-fB-tqO"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="warningHeaderView" destination="8WC-zx-Sie" id="fs8-Er-y6s"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -106,7 +108,7 @@
                     </constraints>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="Oxr-H9-DaF" secondAttribute="trailing" id="JdX-Z2-2g6"/>
                 <constraint firstItem="KkQ-B6-DQh" firstAttribute="leading" secondItem="kaA-EV-c5I" secondAttribute="trailing" constant="2" id="QnM-S9-cdS"/>
@@ -122,9 +124,65 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="1296" y="129"/>
         </view>
+        <view contentMode="scaleToFill" id="8WC-zx-Sie">
+            <rect key="frame" x="0.0" y="0.0" width="600" height="45"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="验证码等同密码，打死也不能告诉他人哦" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jWA-7C-km2">
+                    <rect key="frame" x="30" y="15" width="216" height="15"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <color key="textColor" red="0.5490196078431373" green="0.54509803921568623" blue="0.54509803921568623" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_warning" translatesAutoresizingMaskIntoConstraints="NO" id="QFh-bn-Yh8">
+                    <rect key="frame" x="14" y="15" width="14" height="12"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="14" id="C1Y-mY-yzB"/>
+                        <constraint firstAttribute="height" constant="12" id="fRu-1a-Ax4"/>
+                    </constraints>
+                </imageView>
+            </subviews>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="jWA-7C-km2" firstAttribute="leading" secondItem="QFh-bn-Yh8" secondAttribute="trailing" constant="2" id="Hjc-Pr-KA7"/>
+                <constraint firstAttribute="centerY" secondItem="jWA-7C-km2" secondAttribute="centerY" id="HpQ-If-YvP"/>
+                <constraint firstItem="QFh-bn-Yh8" firstAttribute="top" secondItem="jWA-7C-km2" secondAttribute="top" id="MZs-fs-G30"/>
+                <constraint firstItem="QFh-bn-Yh8" firstAttribute="leading" secondItem="8WC-zx-Sie" secondAttribute="leading" constant="14" id="VC1-at-EY5"/>
+            </constraints>
+            <nil key="simulatedStatusBarMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="1296" y="276.5"/>
+        </view>
+        <view contentMode="scaleToFill" id="2IX-aL-qvE">
+            <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c6h-fT-wki">
+                    <rect key="frame" x="17" y="10" width="566" height="44"/>
+                    <state key="normal" title="确定" backgroundImage="wo_determine">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="confirmBtnAction:" destination="-1" eventType="touchUpInside" id="iXU-DW-DWV"/>
+                    </connections>
+                </button>
+            </subviews>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="centerY" secondItem="c6h-fT-wki" secondAttribute="centerY" id="7IH-hd-HZt"/>
+                <constraint firstAttribute="trailing" secondItem="c6h-fT-wki" secondAttribute="trailing" constant="17" id="oG8-b2-rN4"/>
+                <constraint firstItem="c6h-fT-wki" firstAttribute="leading" secondItem="2IX-aL-qvE" secondAttribute="leading" constant="17" id="yBr-ya-s8n"/>
+            </constraints>
+            <nil key="simulatedStatusBarMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="1296" y="386"/>
+        </view>
     </objects>
     <resources>
+        <image name="wo_determine" width="340" height="44"/>
         <image name="wo_dottedline" width="355" height="1"/>
         <image name="wo_personal_divider" width="375" height="1"/>
+        <image name="wo_warning" width="14" height="12"/>
     </resources>
 </document>
