--- a/rufangrongke/rufangrongke/Classes/main/Controller/WXZLoginController.xib
+++ b/rufangrongke/rufangrongke/Classes/main/Controller/WXZLoginController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -182,7 +182,7 @@
     </objects>
     <resources>
         <image name="NavBg" width="36" height="12"/>
-        <image name="denglu" width="214" height="29"/>
+        <image name="denglu" width="11" height="29"/>
         <image name="dl_biankuang" width="321" height="41"/>
         <image name="logo" width="84" height="84"/>
         <image name="mima" width="20" height="24"/>
