--- a/rufangrongke/rufangrongke/Classes/wo/Controller/WXZPersonalPhoneVC.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/Controller/WXZPersonalPhoneVC.xib
@@ -157,7 +157,7 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c6h-fT-wki">
+                <button opaque="NO" tag="100010" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c6h-fT-wki">
                     <rect key="frame" x="17" y="10" width="566" height="44"/>
                     <state key="normal" title="确定" backgroundImage="wo_determine">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
